# trainee_devops_tasks

./: .gitignore  README.md  check_index.sh  index.html
.github/workflows/: check-index-html.yml  check_index_html.yml  ghrelease.yml  git_task1.yml  python_tasks.yml  task1.yml  test-and-build.yml
.teamcity/: pom.xml  settings.kts
.teamcity/BuildpipelinesVbazhan/: project-config.xml
.teamcity/BuildpipelinesVbazhan/buildTypes/: BuildpipelinesVbazhan_BuildVbazh.xml
.teamcity/BuildpipelinesVbazhan/vcsRoots/: BuildpipelinesVbazhan_HttpsGithubComMarcobehlerjetbrainsBuildpipelinesRefsHeadsMain.xml
.teamcity/TraineeDevopsTasks/: project-config.xml
.teamcity/TraineeDevopsTasks/buildTypes/: TraineeDevopsTasks_Build.xml
.teamcity/TraineeDevopsTasks/vcsRoots/: TraineeDevopsTasks_HttpsGithubComVasyldmitrovichTraineeDevopsTasksGitRefsHeadsTeamcityCicd.xml
.teamcity/_Root/: project-config.xml
.teamcity/_Root/pluginData/: plugin-settings.xml
.teamcity/_Root/vcsRoots/: HttpsGithubComVasyldmitrovichTraineeDevopsTasks.xml
01_git/: commit_and_push.sh  file_for_testing.txt
01_git/task1_badge/: README.md
01_git/task1_badge/src/: check_readmemd.sh
01_git/task2_jinja/: README.md  render_template.py  template.j2
01_git/task2_jinja/src/: render_template.py
01_git/task2_jinja_template/: render_template.py  template.j2
02_aws/task1_s3bucket/: README.md
02_aws/task1_s3bucket/src/: create_bucket.sh  script.sh  text.txt
02_aws/task2_lambda/src/: build.sh  build_app2.sh  main.tf  variables.tf
02_aws/task2_lambda/src/app/: app.py  db.py  pyproject.toml  requirements.txt
02_aws/task2_lambda/src/app/tests/: tests_api.py
02_aws/task2_lambda/src/app2/: lambda_function.py  module3.py  pyproject.toml
02_aws/task2_lambda/src/app2/proj/: READMY.md
02_aws/task2_lambda/src/app2/proj/tests/: test_module3.py
02_aws/task2_lambda/src/app2/tests/: test_module3.py
02_aws/task3_s3_and_lambda/src/: READMY.md  dev.tfvars  main.tf  output.tf  prod.auto.tfvars  (+1 more)
02_aws/task4_ec2_ansible_ssm/: READMY.md  deploy_infrastructure.sh  ec2_ansible.tf  ec2_ssm.tf  main.tf  output.tf  playbook.yml  run_ansible_with_ssh_check.sh  ssm_document.json  ssm_document.yaml  task4_1_build_inventory_file.sh  task4_1_ec2_inventory.ini  task4_1_playbook.yml  variables.tf
03_python/: README.md
03_python/src/: CondStatement.py  DataTypes.py  Intro.py  my_first_app.ipynb  my_first_app.py
03_python/src/task3_makefile2/myapp1/: Makefile  pyproject.toml  script.py
03_python/src/task3_makefile2/myapp1/my_app/: app.py
03_python/src/task3_makefile2/myapp1/tests/: test_app.py
04_docker/src/task2_poetry/my-python-apps/project_v1/: AppLogV1.py  Dockerfile  discover  pyproject.toml
04_docker/src/task2_poetry/my-python-apps/project_v1/tests/: test_AppLogV1.py
04_docker/src/task2_poetry/my-python-apps/project_v2/: Dockerfile  pyproject.toml
04_docker/src/task3_project/: Dockerfile  README.md  pyproject.toml
04_docker/src/task3_project/task3_project/: module1.py  module2.py
04_docker/src/task3_project/tests/: test_module1.py  test_module2.py  test_module3.py
src.teamcity_builds/: Dockerfile  build_s3_download.sh  run_tests.sh  scala_run.sh
task_1/: README.md
task_1/src/: check_readmemd.sh  task1_check_readmefile.sh
task_2/: README.md
(+81 files in other folders)
