[tool.poetry]
name = "task2-lambda"
version = "0.1.0"
description = ""
authors = ["Vasyl Bazhan <vasyl.dmitrovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.2.3"
Flask-Cors = "3.0.10"
Flask-RESTful = "0.3.9"
peewee = "3.16.1"
aniso8601 = "9.0.1"
click = "8.1.3"
colorama = "0.4.6"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.2"
pytz = "2023.3"
six = "1.16.0"
Werkzeug = "2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
