[tool.poetry]
name = "task2-lambda"
version = "0.1.0"
description = ""
authors = ["Vasyl Bazhan <vasyl.dmitrovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"

[tool.poetry.group.dev.dependencies]
requests = { version = "2.25.1" }
pytest = "6.2.4"
coverage = "5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
