[tool.poetry]
name = "project2"
version = "1.1.2"
description = ""
authors = ["Vasyl Bazhan <vasyl.dmitrovich@gmail.com>"]
packages = [
    { include = "proj" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.4"
coverage = "5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
