[tool.poetry]
name = "my-python-app-v1"
version = "0.1.0"
description = "App with numpy version 1.19.5"
authors = ["vbazh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
