[tool.poetry]
name = "my-python-app-v2"
version = "0.1.0"
description = "App with numpy version 1.21.0"
authors = ["vbazh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "==1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
